--- a/app/src/main/res/layout/activity_add.xml
+++ b/app/src/main/res/layout/activity_add.xml
@@ -7,7 +7,7 @@
     tools:context=".AddActivity">
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/pictureView"
         android:layout_width="200dp"
         android:layout_height="200dp"
         android:layout_below="@+id/textView"
@@ -29,7 +29,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.506"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView" />
+        app:layout_constraintTop_toBottomOf="@+id/pictureView" />
 
     <Button
         android:id="@+id/saveBtn"
