--- a/app/src/main/res/layout/one_result.xml
+++ b/app/src/main/res/layout/one_result.xml
@@ -4,7 +4,7 @@
     android:layout_height="100dp">
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/pictureView"
         android:layout_width="120dp"
         android:layout_height="120dp"
         android:layout_alignParentStart="true"
@@ -16,8 +16,8 @@
         android:id="@+id/detatimeText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/imageView"
-        android:layout_toEndOf="@+id/imageView"
+        android:layout_alignTop="@+id/pictureView"
+        android:layout_toEndOf="@+id/pictureView"
         android:inputType="textMultiLine"
         android:text="New Text" />
 
@@ -30,7 +30,7 @@
         android:layout_marginStart="2dp"
         android:layout_marginTop="2dp"
         android:layout_marginEnd="-1dp"
-        android:layout_toEndOf="@+id/imageView"
+        android:layout_toEndOf="@+id/pictureView"
         android:inputType="textMultiLine"
         android:text="New Text" />
 
