マーカー色を選択、反映

--- a/app/src/main/res/values/colors_arrays.xml
+++ b/app/src/main/res/values/colors_arrays.xml
@@ -7,7 +7,7 @@
     </string-array>
     <string-array name="markercolor_values">
         <item>red</item>
-        <item>bule</item>
+        <item>blue</item>
         <item>green</item>
     </string-array>
 </resources>
