--- a/app/src/main/res/layout/one_result.xml
+++ b/app/src/main/res/layout/one_result.xml
@@ -9,8 +9,11 @@
         android:layout_height="120dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_margin="2dp"
-        android:background="#d3d3d3" />
+        android:layout_marginStart="2dp"
+        android:layout_marginTop="2dp"
+        android:layout_marginEnd="2dp"
+        android:layout_marginBottom="2dp"
+        android:background="@color/common_google_signin_btn_text_dark_default" />
 
     <TextView
         android:id="@+id/detatimeText"
